# job-hunter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  PRODUCT_VISION.md  README.md  alembic.ini  docker-compose.yml  project_rules.md  pyproject.toml  todo.md
.ai/: 01 project_rules.md  02 architecture.md  03 PRODUCT_VISION.md  04 principles.md  05 checklist.md  06 coding_standards.md  07 todo.md  UI_REVIEW.md
.codex/: config.toml
.codex/agents/: deep-worker.toml
.playwright-cli/: page-2026-07-23T01-43-10-351Z.yml  page-2026-07-23T01-44-08-693Z.yml  page-2026-07-23T01-44-34-156Z.yml  page-2026-07-23T01-44-55-496Z.yml  page-2026-07-23T01-45-33-938Z.yml  page-2026-07-23T01-57-04-289Z.yml  page-2026-07-23T01-57-28-607Z.yml  page-2026-07-23T01-57-39-505Z.yml  page-2026-07-23T01-58-00-869Z.yml  page-2026-07-23T04-45-06-628Z.yml  page-2026-07-23T04-45-40-570Z.yml  page-2026-07-23T04-45-51-684Z.yml  page-2026-07-23T05-07-46-337Z.yml  page-2026-07-23T05-08-00-862Z.yml
app/: __init__.py  main.py
app/ai/: __init__.py  resume.py  scoring.py
app/api/: __init__.py  auth.py  dashboard.py  dependencies.py  errors.py  exports.py  health.py  jobs.py  notifications.py  provider_runs.py  providers.py  resume.py  router.py  schedules.py  searches.py
app/core/: config.py  downloads.py  errors.py  logging.py  middleware.py  passwords.py  rate_limits.py
app/database/: __init__.py  engine.py  mappers.py  tables.py
app/database/repositories/: __init__.py  _helpers.py  auth.py  exports.py  job_query.py  jobs.py  notifications.py  provider_runs.py  providers.py  resumes.py  schedules.py  searches.py  workspace.py
app/exporters/: __init__.py  jobs.py  sqlite_backup.py
app/models/: __init__.py  auth.py  common.py  dashboard.py  errors.py  export.py  export_errors.py  job.py  matching.py  notification.py  provider.py  provider_run.py  schedule.py  scoring.py  search.py  search_execution.py  workspace.py
app/notifications/: __init__.py  adapters.py
app/providers/: __init__.py  base.py  careers24.py  errors.py  execution.py  jobspy.py  pnet.py  registry.py
app/routers/: __init__.py  audit.py  web.py
app/scheduler/: runtime.py
app/services/: authentication.py  dashboard.py  exports.py  jobs.py  manual_searches.py  matching.py  notifications.py  ports.py  provider_runs.py  providers.py  schedules.py  scoring.py  searches.py  workspace.py
app/static/css/: app.css
app/static/js/: app.js
app/templates/: activity.html  base.html  dashboard.html  error.html  export_history.html  home.html  job_detail.html  jobs.html  login.html  matching.html  notification_history.html  provider_detail.html  provider_run_detail.html  providers.html  runs.html  search_detail.html  searches.html
app/templates/fragments/: dashboard_summary.html  feedback.html  history_pagination.html  job_comparison.html  job_results.html  provider_form.html  resume_profile.html  saved_search_runs.html  schedule_form_feedback.html  search_form.html  workflow_panel.html
config/: config.example.yaml  config.yaml
docker/: Dockerfile  entrypoint.sh
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_MODEL.md  DEPENDENCIES.md  DEPLOYMENT.md  EXPORTS.md  MATCHING.md  MIGRATIONS.md  PROVIDERS.md  PROVIDER_MANAGEMENT.md  RELEASE.md  RELEASE_NOTES.md  SCHEDULER.md  SCORING.md  SEARCHES.md  WORKSPACE.md
migrations/: env.py
migrations/versions/: 20260722_0001_initial_schema.py  20260722_0002_job_workflows.py  20260722_0003_export_events.py  20260722_0004_schedules.py  20260722_0005_authentication.py  20260722_0006_notification_deliveries.py  20260723_0007_resume_profiles.py
scripts/: benchmark.py
tests/: conftest.py  test_api_resources.py  test_audit_ui.py  test_auth.py  test_careers24_provider.py  test_config.py  test_database.py  test_exports.py  test_logging.py  test_main.py  test_matching.py  test_migrations.py  test_notifications.py  test_operations_ui.py  test_provider_ui.py  test_providers.py  test_release.py  test_saved_search_ui.py  test_schedule_ui.py  test_schedules.py  test_scoring.py  test_workspace.py
tests/fixtures/: careers24_results.html  pnet_current_results.html  pnet_results.html
