[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "job-hunter"
version = "0.1.0"
description = "A lightweight, self-hosted job aggregation platform."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Job-Hunter contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "alembic>=1.14,<2",
  "APScheduler>=3.10,<5",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "lxml>=5,<7",
  "playwright>=1.50,<2",
  "pydantic-settings>=2.6,<3",
  "python-jobspy @ https://github.com/Onellan/JobSpy/archive/7160d0faeda408d246e6948f2cc28ec253883375.tar.gz",
  "PyYAML>=6,<7",
  "sqlmodel>=0.0.22,<1",
  "uvicorn[standard]>=0.30,<1",
  "XlsxWriter>=3.2,<4",
]

[project.optional-dependencies]
jobspy = [
  "python-jobspy @ https://github.com/Onellan/JobSpy/archive/7160d0faeda408d246e6948f2cc28ec253883375.tar.gz",
]
pnet = [
  "beautifulsoup4>=4.12,<5",
  "lxml>=5,<7",
  "playwright>=1.50,<2",
]
providers = [
  "beautifulsoup4>=4.12,<5",
  "lxml>=5,<7",
  "playwright>=1.50,<2",
  "python-jobspy @ https://github.com/Onellan/JobSpy/archive/7160d0faeda408d246e6948f2cc28ec253883375.tar.gz",
]
exports = ["XlsxWriter>=3.2,<4"]
dev = [
  "black>=24.10,<26",
  "httpx2>=2.7,<3",
  "isort>=5.13,<7",
  "mypy>=1.13,<2",
  "pre-commit>=4,<5",
  "pytest>=8.3,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.8,<1",
  "beautifulsoup4>=4.12,<5",
  "lxml>=5,<7",
  "types-PyYAML>=6.0.12",
  "XlsxWriter>=3.2,<4",
]

[project.urls]
Documentation = "https://github.com/job-hunter/job-hunter#readme"
Repository = "https://github.com/job-hunter/job-hunter"

[project.scripts]
job-hunter = "app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["error::DeprecationWarning"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "data"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]
skip_glob = ["data/*", ".trunk/*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
exclude = ["data"]

[[tool.mypy.overrides]]
module = ["yaml", "apscheduler.*"]
ignore_missing_imports = true
